--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -1,6 +1,6 @@
 # vi:set ft=dockerfile:
 # --- stage 1 ---
-FROM quay.io/app-sre/ubi8-go-toolset:1.16.12-4 as builder
+FROM registry.redhat.io/rhel8/go-toolset:1.16 as builder
 
 USER root
 
