--- a/config/crd/bases/addons.managed.openshift.io_addonmetadata.yaml
+++ b/config/crd/bases/addons.managed.openshift.io_addonmetadata.yaml
@@ -154,7 +154,6 @@ spec:
                 pattern: ^([A-Za-z -]+ <[0-9A-Za-z_.-]+@redhat\.com>,?)+$
                 type: string
               bundleParameters:
-                description: 'Deprecated: Replaced by SubscriptionConfig.'
                 properties:
                   addonParamsSecretName:
                     pattern: ^addon-[0-9A-Za-z-]+-parameters$
@@ -303,10 +302,11 @@ spec:
                 pattern: ^quay\.io/osd-addons/[a-z-]+
                 type: string
               installMode:
-                description: 'OLM InstallMode for the addon operator. One of: AllNamespaces
-                  or OwnNamespace.'
+                description: 'OLM InstallMode for the addon operator. One of: AllNamespaces,
+                  SingleNamespace or OwnNamespace.'
                 enum:
                 - AllNamespaces
+                - SingleNamespace
                 - OwnNamespace
                 type: string
               label:
