--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -16,6 +16,7 @@ builds:
       - CGO_CFLAGS=-DSQLITE_ENABLE_JSON1
     goos:
       - linux
+      - darwin
     goarch:
       - amd64
     main: ./cmd/mtcli
@@ -28,6 +29,7 @@ builds:
 archives:
   - replacements:
       linux: Linux
+      darwin: Darwin
       386: i386
       amd64: x86_64
 checksum:
