--- a/config/crd/bases/addons.managed.openshift.io_addonmetadata.yaml
+++ b/config/crd/bases/addons.managed.openshift.io_addonmetadata.yaml
@@ -372,7 +372,7 @@ spec:
                 type: string
               operatorName:
                 description: Name of the addon operator.
-                pattern: ^[A-Za-z0-9][A-Za-z0-9-]{0,30}[A-Za-z0-9]$
+                pattern: ^[A-Za-z0-9][A-Za-z0-9-]*[A-Za-z0-9]$
                 type: string
               pagerduty:
                 properties:
