--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -2,8 +2,8 @@
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/default
 resources:
-- bases/addons.managed.openshift.io_addontemplates.yaml
-- bases/addons.managed.openshift.io_addonimagesets.yaml
+  - bases/addonsflow.redhat.openshift.io_addonmetadata.yaml
+  - bases/addonsflow.redhat.openshift.io_addonimagesets.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge:
@@ -21,4 +21,4 @@ patchesStrategicMerge:
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
-- kustomizeconfig.yaml
+  - kustomizeconfig.yaml
