--- a/config/crd/patches/webhook_in_addonmetadata.yaml
+++ b/config/crd/patches/webhook_in_addonmetadata.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: addontemplates.addons.managed.openshift.io
+  name: addontemplates.addonsflow.redhat.openshift.io
 spec:
   conversion:
     strategy: Webhook
