--- a/config/rbac/addonimageset_editor_role.yaml
+++ b/config/rbac/addonimageset_editor_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: addonimageset-editor-role
 rules:
 - apiGroups:
-  - addons.managed.openshift.io
+  - addonsflow.redhat.openshift.io
   resources:
   - addonimagesets
   verbs:
@@ -17,7 +17,7 @@ rules:
   - update
   - watch
 - apiGroups:
-  - addons.managed.openshift.io
+  - addonsflow.redhat.openshift.io
   resources:
   - addonimagesets/status
   verbs:
