--- a/config/rbac/addonmetadata_viewer_role.yaml
+++ b/config/rbac/addonmetadata_viewer_role.yaml
@@ -5,7 +5,7 @@ metadata:
   name: addontemplate-viewer-role
 rules:
 - apiGroups:
-  - addons.managed.openshift.io
+  - addonsflow.redhat.openshift.io
   resources:
   - addontemplates
   verbs:
@@ -13,7 +13,7 @@ rules:
   - list
   - watch
 - apiGroups:
-  - addons.managed.openshift.io
+  - addonsflow.redhat.openshift.io
   resources:
   - addontemplates/status
   verbs:
