--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -7,7 +7,7 @@ metadata:
   name: manager-role
 rules:
 - apiGroups:
-  - addons.managed.openshift.io
+  - addonsflow.redhat.openshift.io
   resources:
   - AddonMetadata
   verbs:
@@ -19,13 +19,13 @@ rules:
   - update
   - watch
 - apiGroups:
-  - addons.managed.openshift.io
+  - addonsflow.redhat.openshift.io
   resources:
   - AddonMetadata/finalizers
   verbs:
   - update
 - apiGroups:
-  - addons.managed.openshift.io
+  - addonsflow.redhat.openshift.io
   resources:
   - AddonMetadata/status
   verbs:
