Using PackageName to extract Addons
A new PackageName property was introduced here:
https://github.com/mt-sre/managed-tenants-cli/pull/134

The PackageName is what we are actually looking for. Most of the time,
it's the same as the OepratorName, but not always.

Signed-off-by: Amador Pahim <apahim@redhat.com>

--- a/config/crd/bases/addonsflow.redhat.openshift.io_addonmetadata.yaml
+++ b/config/crd/bases/addonsflow.redhat.openshift.io_addonmetadata.yaml
@@ -373,6 +373,10 @@ spec:
                 description: Name of the addon operator.
                 pattern: ^[A-Za-z0-9][A-Za-z0-9-]*[A-Za-z0-9]$
                 type: string
+              packageName:
+                description: Name of the addon OLM package. Defaults to operatorName when not specified.
+                pattern: ^[A-Za-z0-9][A-Za-z0-9-]*[A-Za-z0-9]$
+                type: string
               pagerduty:
                 properties:
                   acknowledgeTimeout:
