--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -6,59 +6,62 @@
 # Validate config with: $ goreleaser check
 project_name: mtcli
 builds:
-  - id: linux-amd64
-    env:
-      - CGO_ENABLED=1
-      - GO111MODULE=on
-      # required by opm to extract sql-based catalog
-      - CGO_CFLAGS=-DSQLITE_ENABLE_JSON1
-      - CC=gcc
-    goos:
-      - linux
-    goarch:
-      - amd64
-    main: ./cmd/mtcli
-    ldflags:
-      - -s -w
-      - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.version={{.Version}}'
-      - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.commit={{.Commit}}'
-      - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.date={{.Date}}'
-      - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.builtBy=goreleaser'
-  - id: darwin-amd64
-    env:
-      - CGO_ENABLED=1
-      - GO111MODULE=on
-      # required by opm to extract sql-based catalog
-      - GO_CFLAGS=-DSQLITE_ENABLE_JSON1
-      - CC=o64-clang
-    goos:
-      - darwin
-    goarch:
-      - amd64
-    main: ./cmd/mtcli
-    ldflags:
-      - -s -w
-      - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.version={{.Version}}'
-      - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.commit={{.Commit}}'
-      - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.date={{.Date}}'
-      - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.builtBy=goreleaser'
+- id: mtcli-gcc
+  env:
+  - CGO_ENABLED=1
+  - GO111MODULE=on
+  # required by opm to extract sql-based catalog
+  - CGO_CFLAGS=-DSQLITE_ENABLE_JSON1
+  - CC=gcc
+  goos:
+  - linux
+  goarch:
+  - amd64
+  main: &main ./cmd/mtcli
+  ldflags: &flags
+  - -s -w
+  - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.version={{.Version}}'
+  - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.commit={{.Commit}}'
+  - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.date={{.Date}}'
+  - -X 'github.com/mt-sre/addon-metadata-operator/internal/cmd.builtBy=goreleaser'
+- id: mtcli-o64-clang
+  env:
+  - CGO_ENABLED=1
+  - GO111MODULE=on
+  # required by opm to extract sql-based catalog
+  - GO_CFLAGS=-DSQLITE_ENABLE_JSON1
+  - CC=o64-clang
+  goos:
+  - darwin
+  goarch:
+  - amd64
+  main: *main
+  ldflags: *flags
 archives:
-  - id: mtcli
-    builds:
-      - linux-amd64
-      - darwin-amd64
-  - replacements:
-      linux: Linux
-      darwin: Darwin
-      386: i386
-      amd64: x86_64
+- replacements:
+    linux: Linux
+    darwin: Darwin
+    amd64: x86_64
 checksum:
   name_template: "checksums.txt"
 snapshot:
   name_template: "{{ incpatch .Version }}-next"
 changelog:
-  sort: asc
+  use: github
+  groups:
+  - title: Breaking
+    regexp: "^.*(fix|feat)[(\\w)]*!:+.*$"
+    order: 0
+  - title: Changes
+    regexp: "^.*feat[(\\w)]*:+.*$"
+    order: 10
+  - title: Bugfixes
+    regexp: "^.*fix[(\\w)]*:+.*$"
+    order: 20
+  - title: Trivial
+    order: 999
   filters:
     exclude:
-      - "^docs:"
-      - "^test:"
+    - Merge pull request
+    - "^docs:"
+    - "^test:"
