--- a/Dockerfile.release
+++ b/Dockerfile.release
@@ -1,4 +1,4 @@
-FROM ghcr.io/goreleaser/goreleaser-cross:v1.17.6-v1.3.1
+FROM ghcr.io/goreleaser/goreleaser-cross:v1.18.1
 
 COPY . /go/src/github.com/mt-sre/addon-metadata-operator
 
