--- a/internal/testdata/metadata_v1/legacy/connectors-operator/metadata/stage/addon.yaml
+++ b/internal/testdata/metadata_v1/legacy/connectors-operator/metadata/stage/addon.yaml
@@ -82,4 +82,4 @@ subOperators:
   operator_name: strimzi-kafka-operator
   operator_namespace: redhat-openshift-connectors
 targetNamespace: redhat-openshift-connectors
-testHarness: quay.io/rhoas/cos-fleetshard-test-harness
+testHarness: test-invalid
