feat: changed subscriptionConfig to config
Signed-off-by: Ankit152 <ankitkurmi152@gmail.com>

--- a/internal/testdata/metadata_v1/imagesets/reference-addon/addonimagesets/stage/reference-addon.v0.0.1.yaml
+++ b/internal/testdata/metadata_v1/imagesets/reference-addon/addonimagesets/stage/reference-addon.v0.0.1.yaml
@@ -4,7 +4,7 @@ relatedImages: []
 addOnParameters: []
 addOnRequirements: []
 subOperators: []
-subscriptionConfig:
+config:
   env:
     - name: IN
       value: imageset_file
