--- a/internal/testdata/metadata_v2/reference-addon/addonimagesets/stage/reference-addon.v0.0.1.yaml
+++ b/internal/testdata/metadata_v2/reference-addon/addonimagesets/stage/reference-addon.v0.0.1.yaml
@@ -13,7 +13,7 @@ spec:
   addOnParameters: []
   addOnRequirements: []
   subOperators: []
-  subscriptionConfig:
+  config:
     env:
       - name: IN
         value: imageset_file
