--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -38,10 +38,15 @@ builds:
   main: *main
   ldflags: *flags
 archives:
-- replacements:
-    linux: Linux
-    darwin: Darwin
-    amd64: x86_64
+- id: mtcli
+  name_template: >-
+    {{- .ProjectName }}_
+    {{- .Version }}_
+    {{- title .Os }}_
+    {{- if eq .Arch "amd64" }}x86_64
+    {{- else if eq .Arch "386" }}i386
+    {{- else }}{{ .Arch }}{{ end }}
+    {{- if .Arm }}v{{ .Arm }}{{ end -}}
 checksum:
   name_template: "checksums.txt"
 snapshot:
