feat: adding automatic ok-to-test label for dependency updates
Signed-off-by: Ankit152 <ankitkurmi152@gmail.com>

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,6 +6,7 @@ updates:
     interval: daily
   labels:
   - kind/deps
+  - ok-to-test
   commit-message:
     prefix: fix
     include: scope
@@ -15,6 +16,7 @@ updates:
     interval: daily
   labels:
   - kind/deps
+  - ok-to-test
   commit-message:
     prefix: fix
     include: scope
